basic display of json data

--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html>
 
 <head>
-    <title>WKND HMWRK</title>
+    <title>Magical World of Harry Potter Info!!</title>
     <link rel='stylesheet' type='text/css' href='main.css'>
     <script src='app.js'></script>
 </head>
 
 <body>
+    <h1> Fantastic Harry Potter Facts and Where To Find Them!</h1>
     <select style="display:none" id="hpcharacters">
-
+        <option value= ""></option>
     </select>
-    <div id="info" style="display:none">
+    <div id="info">
         <p></p>
         <p></p>
         <p></p>
         <p></p>
+        <p></p>
+        
     </div>
-    <p> "This is my web app!!!"</p>
+   
+   
 </body>
 
 </html>
+
